<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/menu_new_arrival"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/new_arrival"
            android:visible="false"/>
        <item
            android:id="@+id/menu_promotion"
            android:icon="@mipmap/heart_favourite"
            android:title="@string/promotion_navigation"/>
        <item
            android:id="@+id/menu_about_us"
            android:icon="@drawable/about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/menu_brand"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/brand"
            android:visible="false"/>

        <item
            android:id="@+id/menu_blog"
            android:icon="@mipmap/partner"
            android:title="@string/our_partner" />

        <item
            android:id="@+id/menu_contact_us"
            android:icon="@drawable/contract"
            android:title="@string/contact_us"/>
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout"
            android:visible="true"/>
    </group>


</menu>
