<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        android:layout_margin="@dimen/margin_small"
        app:cardCornerRadius="@dimen/margin_small"
        app:cardBackgroundColor="@color/cardview_dark_background"
        android:background="@color/cardview_dark_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_small"
            android:background="@color/colorWhite">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/booking_ref"
                    android:textColor="@color/dark"
                    android:paddingLeft="@dimen/margin_medium_2"/>

                <TextView
                    android:id="@+id/user_order_booking_ref"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/booking_ref"
                    android:textColor="@color/dark"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amt"
                    android:textColor="@color/dark"
                    android:paddingLeft="@dimen/margin_medium_2"/>
                <TextView
                    android:id="@+id/user_order_amt"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/booking_ref"
                    android:textColor="@color/dark"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/payment"
                    android:textColor="@color/dark"
                    android:paddingLeft="@dimen/margin_medium_2"/>

                <TextView
                    android:id="@+id/user_order_payment"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/booking_ref"
                    android:textColor="@color/dark"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_status"
                    android:textColor="@color/dark"
                    android:paddingLeft="@dimen/margin_medium_2"/>

                <TextView
                    android:id="@+id/user_order_status"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/booking_ref"
                    android:textColor="@color/dark"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/created"
                    android:textColor="@color/dark"
                    android:paddingLeft="@dimen/margin_medium_2"/>

                <TextView
                    android:id="@+id/user_order_create"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/booking_ref"
                    android:textColor="@color/dark"
                    android:fontFamily="@font/aileron_regular"/>
            </LinearLayout>
            <android.support.v7.widget.CardView
                android:id="@+id/card_cancel_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="@dimen/margin_small"
                app:cardElevation="@dimen/cardElevation"
                app:cardCornerRadius="5dp"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_card_medium_2"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_order"
                    android:background="@drawable/order_background"
                    android:paddingTop="@dimen/margin_medium"
                    android:paddingBottom="@dimen/margin_medium"
                    android:paddingLeft="@dimen/margin_card_medium_2"
                    android:paddingRight="@dimen/margin_card_medium_2"
                    android:textColor="@color/red"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>