<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_confirm"
        android:gravity="center"
        android:padding="@dimen/margin_medium"
        android:textColor="@color/dark"/>
    <View
        android:id="@+id/dialog_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark"
        android:layout_below="@id/dialog_title"/>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_below="@id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:padding="@dimen/margin_medium"
            android:gravity="end"
            android:textColor="@color/cardview_dark_background"/>
        <TextView
            android:id="@+id/dialog_amt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium"
            android:text="10000"
            android:textColor="@color/cardview_dark_background"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_below="@id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/promotion"
            android:padding="@dimen/margin_medium"
            android:gravity="end"
            android:textColor="@color/cardview_dark_background"/>
        <TextView
            android:id="@+id/dialog_promotion"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium"
            android:text="10"
            android:textColor="@color/dark"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_below="@id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/total_amt"
            android:padding="@dimen/margin_medium"
            android:gravity="end"
            android:textColor="@color/cardview_dark_background"/>
        <TextView
            android:id="@+id/dialog_total_amt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium"
            android:text="9000"
            android:textColor="@color/dark"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/dialog_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="yes"
            android:layout_margin="@dimen/margin_medium_2" />
        <Button
            android:id="@+id/dialog_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="no"
            android:layout_margin="@dimen/margin_medium_2"/>
    </LinearLayout>
</RelativeLayout>