<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fb="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/loginLinearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/margin_extra_large">
      <ImageView
          android:id="@+id/faceBookImage"
          android:layout_width="match_parent"
          android:layout_height="90dp"
          android:src="@drawable/automart_logo"
          android:layout_margin="@dimen/margin_large"
          android:padding="0dp"
          android:visibility="visible"/>

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="25dp"
          android:layout_marginRight="25dp"
          android:layout_marginTop="20dp"
          app:cardCornerRadius="@dimen/margin_medium">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:background="@drawable/box_selector"
            android:padding="@dimen/margin_medium"
            android:gravity="center"/>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="25dp"
          android:layout_marginRight="25dp"
          android:layout_marginTop="20dp"
          app:cardElevation="@dimen/cardElevation"
          android:background="@drawable/box_selector"
          app:cardCornerRadius="@dimen/margin_medium">
      <EditText
          android:id="@+id/login_password"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:inputType="textPassword"
          android:hint="Password"
          android:background="@drawable/box_selector"
          android:padding="9dp"
          android:gravity="center"/>
      </android.support.v7.widget.CardView>
      <CheckBox
          android:id="@+id/show_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Show Password"
          android:textSize="16sp"
          android:textColor="@color/dark"
          android:layout_marginLeft="25dp"
          android:layout_marginRight="25dp"
          android:layout_marginTop="20dp"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginLeft="25dp"
          android:layout_marginRight="25dp"
          android:layout_marginTop="20dp">
        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="Remember"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/login_forget_password"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="Forget Password?"
            android:textColor="#000"
            android:layout_gravity="end"
            android:gravity="center"
            android:textSize="16sp"
            android:visibility="gone"/>
      </LinearLayout>

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="25dp"
          android:layout_marginRight="25dp"
          android:layout_marginTop="@dimen/margin_large"
          android:layout_marginBottom="@dimen/margin_medium"
          app:cardElevation="@dimen/cardElevation"
          app:cardCornerRadius="5dp"
          android:padding="@dimen/margin_small">
        <com.andexert.library.RippleView
            android:id="@+id/ripple_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector"
            android:padding="@dimen/margin_medium">
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="SIGN IN"
              android:textColor="@color/colorWhite"
              android:padding="@dimen/margin_medium"
              android:gravity="center"/>
        </com.andexert.library.RippleView>
      </android.support.v7.widget.CardView>

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="70dp"
          android:src="@drawable/or_connect"
          android:layout_marginLeft="23dp"
          android:layout_marginRight="23dp"/>

      <!--<com.facebook.login.widget.LoginButton
          android:id="@+id/facebook_login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          fb:login_text="@string/loginFacebookButton"
          style="@style/FacebookLoginButton"
          facebook:com_facebook_login_text="@string/btn_facebook" />-->
      <FrameLayout
          android:id="@+id/FrameLayout1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/margin_large"
          android:layout_marginRight="@dimen/margin_large">
        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
        <Button
            android:id="@+id/fb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_facebook"
            android:onClick="onClick"
            android:text="@string/btn_facebook"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:drawableLeft="@mipmap/facebook"
            android:drawablePadding="28dp"
            android:paddingLeft="@dimen/margin_medium"/>
      </FrameLayout>

      <FrameLayout
          android:id="@+id/FrameLayout2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_medium_3"
          android:layout_marginLeft="@dimen/margin_large"
          android:layout_marginRight="@dimen/margin_large">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:visibility="visible"/>
        <Button
            android:id="@+id/google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_googleplus"
            android:onClick="onClick"
            android:text="@string/btn_googleplus"
            android:textColor="@color/colorWhite"
            android:visibility="visible"
            android:drawableLeft="@mipmap/gmail"
            android:drawablePadding="28dp"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_large"/>
      </FrameLayout>
    </LinearLayout>
  </ScrollView>
</FrameLayout>